--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1016,30 +1016,19 @@ textarea.form-control {
 	padding-bottom: 120px;
 }
 
-// Map
+
 /*********************************
  Contact Map
 *********************************/
 
-.contact_map
-{
-	margin-top: 86px;
-}
-#google_map
-{
+// Map
+
+#map {
+	// height: 400px;
 	width: 100%;
-	height: 532px;
-}
-.map_container
-{
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
-}
-#map
-{
-	width: 100%;
-	height: calc(100% + 30px);
+	@include media-breakpoint-down(md) {
+		height: 300px;
+	}
 }
 
 @-webkit-keyframes pulse {
