--- a/scss/style.scss
+++ b/scss/style.scss
@@ -334,100 +334,11 @@ h1, h2, h3, h4, h5,
 }
 
 
-
-
-
-.hero-wrap{
-	width: 100%;
-	height: 100%;
-	position: inherit;
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: top center;
-	@include media-breakpoint-down(md){
-		background-position: top center !important;
-	}
-	.overlay{
-		position: absolute;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
-		content: '';
-		opacity: .4;
-		background: $black;
-		@include gradient-background();
-	}
-	&.hero-wrap-2{
-		.overlay{
-			width: 100%;
-			opacity: .2;
-		}
-	}
-}
-
-.slider-text{
-	.text{
-		width: 100%;
-	}
-	h1 {
-		font-size: 60px;
-		color: $white;
-		line-height: 1.2;
-		font-weight: 300;
-		@include media-breakpoint-down(md) {
-			font-size: 40px;
-		}
-	}
-	p {
-		font-size: 20px;
-		line-height: 1.5;
-		font-weight: 300;
-		color: rgba(255,255,255,.9);
-		strong{
-			font-weight: 700;
-			a{
-				color: $black;
-			}
-		}
-		&.caps{
-			font-weight: 400;
-			font-size: 16px;
-		}
-	}
-	.breadcrumbs{
-		font-size: 16px;
-		margin-bottom: 20px;
-		z-index: 99;
-		font-weight: 400;
-		span{
-			color: rgba(255,255,255,.8);
-			i{
-				color: rgba(255,255,255,.8);
-			}
-			a{
-				color: rgba(255,255,255,1);
-				&:hover, &:focus{
-					color: $primary;
-					i{
-						color: $primary;
-					}
-				}
-			}
-		}
-	}
-	.bread{
-		font-weight: 700;
-	}
-}
-
-
-}
-
-
+//search
 .search-wrap-1{
 	position: relative;
 	background: $darken;
+    padding-bottom: 20;
 	-webkit-box-shadow: 0px 75px 94px -66px rgba(0,0,0,0.66);
 	-moz-box-shadow: 0px 75px 94px -66px rgba(0,0,0,0.66);
 	box-shadow: 0px 75px 94px -66px rgba(0,0,0,0.66);
