--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@ html, body {
 
 body {
   background: rgb(12, 7, 7);
+  
 }
 
 .slider3d__inner, .slider3d__rotater, .slider3d__handle__inner, .slider3d__handle__rotater {
@@ -112,7 +113,7 @@ body {
           transform-style: preserve-3d;
 }
 .slider3d__item:nth-child(1) {
-  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/3d-slider-1.jpg");
+  background-image:  url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/3d-slider-5.jpg");
 }
 .slider3d__item:nth-child(2) {
   background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/3d-slider-2.jpg");
@@ -121,10 +122,10 @@ body {
   background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/3d-slider-3.jpg");
 }
 .slider3d__item:nth-child(4) {
-  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/3d-slider-4.jpg");
+  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/3d-slider-1.jpg");
 }
 .slider3d__item:nth-child(5) {
-  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/3d-slider-5.jpg");
+  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/3d-slider-4.jpg");
 }
 .slider3d__heading {
   position: absolute;
@@ -136,7 +137,7 @@ body {
   font-size: 12rem;
   line-height: 1;
   text-transform: uppercase;
-  color: #ffffff;
+  color: #1f0707;
   -webkit-transform: translateZ(3rem) scale(0.5);
           transform: translateZ(3rem) scale(0.5);
   opacity: 0;
