--- a/css/style.css
+++ b/css/style.css
@@ -284,6 +284,44 @@ body {
 }
 
 /*end of heroimage*/
+
+/*adventure*/
+
+.feature-area {
+  position: relative;
+  padding-top: 100px;
+  padding-bottom: 30px; }
+  @media (max-width: 1199px) {
+    .feature-area {
+      padding-bottom: 50px; } }
+
+.single-feature {
+  text-align: center;
+  padding: 40px 20px;
+  border: 1px solid #eeeeee;
+  margin-bottom: 30px;
+  -webkit-transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s; }
+  .single-feature .feature-thumb {
+    position: relative;
+    overflow: hidden;
+    background: #f7f9fd;
+    padding: 40px; }
+  .single-feature .feature-details h5 {
+    font-size: 21px;
+    margin-bottom: 15px; }
+  .single-feature:hover {
+    border: 1px solid transparent;
+     box-shadow: 0px 5px 50px rgba(129, 74, 255, 0.2);}
+
+    /*end of adventure*/
+
+.img:hover {
+    border: 1px solid transparent;
+     }
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
