--- a/css/style.css
+++ b/css/style.css
@@ -385,7 +385,7 @@ body {
 }
 .filtr-container .filtr-item:hover .item-title a,
 .filtr-container .filtr-item:hover .item-title p{
-    color:#2cdbb5;
+    color: yellow;
 }
 /*.item-title*/
 /*testimony*/
