--- a/css/style.css
+++ b/css/style.css
@@ -395,7 +395,6 @@ body {
 .discount-offer {
     padding: 120px ;
     position: relative;
-    background: url(../../assets/images/home/offer-timer.jpg)no-repeat center fixed;
     background-size: cover;
     z-index: 1;
     
@@ -407,12 +406,13 @@ body {
     left:0;
     width: 100%;
     height: 100%;
-    background: rgba(0,122,207,.5);
+    background: rgba(112, 176, 219, 0.5);
     z-index: -1;
+     background-image: url("images/offer.jpg");
 }
 
-.dicount-offer-content h2{
-    color:#fff;
+.discount-offer-content h2{
+    color:rgb(20, 19, 19);
     font-size:30px;
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
@@ -461,6 +461,8 @@ body {
     max-width: 160px;
     margin: 0 auto;
 }/*.discount-offer-btn*/
+
+
 /*testimony*/
 
 *{
@@ -841,7 +843,8 @@ h1, .h1 {
   font-size: 2.5rem; }
 
 h2, .h2 {
-  font-size: 2rem; }
+  font-size: 2rem;
+  padding-top: 20px; }
 
 h3, .h3 {
   font-size: 1.75rem; }
