--- a/scss/style.scss
+++ b/scss/style.scss
@@ -506,6 +506,7 @@ h1, h2, h3, h4, h5,
 	}
 	.text{
 		padding: 20px;
+        padding-top: 20px;
 		position: relative;
 		height: 320px;
 		h3{
@@ -680,10 +681,10 @@ textarea.form-control {
 }
 
 .bg-primary {
-	background: $primary!important;
+	background: $primary;
 }
 .bg-darken {
-	background: $darken!important;
+	background: $darken;
 }
 
 
@@ -1008,7 +1009,6 @@ textarea.form-control {
 
 //COVER BG
 .img,
-.blog-img,
 .user-img{
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -1138,14 +1138,7 @@ textarea.form-control {
 	width: 100%;
 	height: 270px;
 }
-.blog-entry{
-	overflow: hidden;
-	@include media-breakpoint-up(md){
-		margin-bottom: 30px;
-	}
-	@include media-breakpoint-down(sm){
-		margin-bottom: 30px;
-	}
+
 	.text {
 		position: relative;
 		width: 100%;
@@ -1330,11 +1323,7 @@ textarea.form-control {
 
 //### .block-21
 .block-21 {
-	.blog-img{
-		display: block;
-		height: 80px;
-		width: 80px;
-	}
+
 	.text {
 		width: calc(100% - 100px);
 		.heading {
