changed footer to all pages

--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ body {
   background-image: url("https://i0.wp.com/s1.uphinh.org/2020/04/22/joonyeop-baek-1kf69eE7VR4-unsplash.jpg");
 }
 .slider3d__item:nth-child(5) {
-  background-image: url("https://pasteboard.co/J4TzZB1.jpg");
+  background-image: url("https://i0.wp.com/s1.uphinh.org/2020/04/23/roman-raizen-xadg_h62oG8-unsplash.jpg");
 }
 .slider3d__heading {
   position: absolute;
@@ -236,6 +236,8 @@ body {
 }
 
 /*end of heroimage*/
+
+
 
 /*adventure*/
 
