--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -791,6 +791,171 @@ h2, p, button {
 
 /*end of testimony*/
 
+/*Offers*/
+
+.offers
+{
+	width: 100%;
+	padding-top: 105px;
+	padding-bottom: 43px;
+	background: #f3f6f9;
+}
+.offers_items
+{
+	margin-top: 90px;
+}
+.offers_col
+{
+	margin-bottom: 83px;
+}
+.offers_item
+{
+
+}
+.offers_image_container
+{
+	width: 100%;
+	height: 100%;
+}
+.offers_image_background
+{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center center;
+}
+.offer_name
+{
+	position: absolute;
+	left: 0;
+	bottom: 27px;
+	width: 180px;
+	height: 33px;
+	background: #fa9e1b;
+	overflow: hidden;
+}
+.offer_name a
+{
+	display: block;
+	font-size: 16px;
+	font-weight: 700;
+	color: #FFFFFF;
+	text-transform: uppercase;
+	line-height: 35px;
+	padding-left: 22px;
+}
+.offers_content
+{
+	
+}
+.offers_price
+{
+	display: inline-block;
+	font-size: 36px;
+	font-weight: 700;
+	color: #eda84a;
+	line-height: 25px;
+}
+.offers_price span
+{
+	font-size: 14px;
+	font-weight: 400;
+	color: #929191;
+	margin-left: 12px;
+}
+.offers_rating
+{
+
+}
+.offers_rating i::before
+{
+	font-size: 13px;
+	margin-right: 2px;
+}
+.offers_text
+{
+	font-size: 14px;
+	font-weight: 400;
+	color: #929191;
+	margin-top: 16px;
+}
+.offers_icons
+{
+	margin-top: 17px;
+}
+.offers_icons_item
+{
+	display: inline-block;
+	margin-right: 15px;
+}
+.offers_icons_item:last-child
+{
+	margin-right: 0px;
+}
+.offers_link
+{
+	margin-top: 54px;
+}
+.section_title{
+    font-size: 30px;
+    font-weight: 700;
+    color: #000;
+     font-family: "Roboto", sans-serif;
+     letter-spacing: 1px;
+}
+
+.offers_link a
+{
+	font-size: 12px;
+	font-weight: 700;
+	color: #2d2c2c;
+	text-transform: uppercase;
+	-webkit-transition: all 200ms ease;
+	-moz-transition: all 200ms ease;
+	-ms-transition: all 200ms ease;
+	-o-transition: all 200ms ease;
+	transition: all 200ms ease;
+}
+.offers_link a:hover
+{
+	color: #fa9e1b;
+}
+
+
+@media only screen and (max-width: 991px)
+{
+    .offers_image_container
+	{
+		height: 708px;
+	}
+	.offers_content
+	{
+		margin-top: 40px;
+	}
+}
+
+
+@media only screen and (max-width: 767px)
+{
+
+	.offers_image_container
+	{
+		height: 524px;
+	}
+}
+
+@media only screen and (max-width: 575px)
+{
+    .offers_image_container
+	{
+		height: calc((100vw - 30px) / 0.974);
+	}
+}
+/*end of offer*/
 /*!
  * Bootstrap v4.2.1 (https://getbootstrap.com/)
  * Copyright 2011-2018 The Bootstrap Authors
