--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -306,7 +306,7 @@ body {
   top: 10px;
   -webkit-transform: translatex(-50%);
           transform: translatex(-50%);
-  background: #f7e195;
+  background:white;
 }
 
 .c-featurette {
@@ -336,8 +336,8 @@ body {
           flex: 1 1 auto;
   margin: 16px 8px;
   min-height: 512px;
-  color: #fff;
-  font-family: "Poppins", sans-serif;
+  color: white;
+  font-family: "Roboto", sans-serif;
   letter-spacing: 2px;
   text-align: center;
   border-radius: 2px;
@@ -363,32 +363,16 @@ body {
   width: 100%;
   left: 32px;
   top: 32px;
-  background-image: radial-gradient(circle 1px at 0 0, #c2c2c2, transparent 1px), radial-gradient(circle 1px at 15px 0, #c2c2c2, transparent 1px), radial-gradient(circle 1px at 15px 15px, #c2c2c2, transparent 1px), radial-gradient(circle 1px at 0 15px, #c2c2c2, transparent 1px);
   background-size: 16px 16px;
   background-repeat: repeat;
   -webkit-transition: 250ms ease;
   transition: 250ms ease;
 }
 .c-featurette__item:nth-child(1)::before {
-  background: -webkit-gradient(linear, left bottom, left top, from(#cc6633), color-stop(35%, transparent));
-  background: linear-gradient(0deg, #cc6633, transparent 35%);
-}
-.c-featurette__item:nth-child(2)::before {
-  background: -webkit-gradient(linear, left bottom, left top, from(#b9ac8b), color-stop(35%, transparent));
   background: linear-gradient(0deg, #b9ac8b, transparent 35%);
 }
-.c-featurette__item:nth-child(3)::before {
-  background: -webkit-gradient(linear, left bottom, left top, from(#2e2e2d), color-stop(35%, transparent));
-  background: linear-gradient(0deg, #2e2e2d, transparent 35%);
-}
-.c-featurette__item:nth-child(4)::before {
-  background: -webkit-gradient(linear, left bottom, left top, from(#bdcadb), color-stop(35%, transparent));
-  background: linear-gradient(0deg, #bdcadb, transparent 35%);
-}
-.c-featurette__item:nth-child(5)::before {
-  background: -webkit-gradient(linear, left bottom, left top, from(#532252), color-stop(35%, transparent));
-  background: linear-gradient(0deg, #532252, transparent 35%);
-}
+
+
 .c-featurette__item:hover {
   -webkit-box-flex: 4;
           flex: 4 0 auto;
@@ -414,12 +398,7 @@ body {
   transition: transform 500ms ease 85ms;
   transition: transform 500ms ease 85ms, -webkit-transform 500ms ease 85ms;
 }
-.c-featurette__item:hover .c-featurette__button {
-  display: block;
-  opacity: 1;
-  -webkit-transition: opacity 350ms ease 300ms;
-  transition: opacity 350ms ease 300ms;
-}
+
 .c-featurette__background {
   position: absolute;
   width: 100%;
@@ -432,6 +411,7 @@ body {
 .c-featurette__category {
   text-transform: uppercase;
   font-weight: 500;
+  
   -webkit-transition: -webkit-transform 500ms ease;
   transition: -webkit-transform 500ms ease;
   transition: transform 500ms ease;
@@ -441,32 +421,14 @@ body {
 .c-featurette__heading {
   margin: 8px 0 24px;
   font-size: 2.25em;
-  text-shadow: 1px 1px rgba(51, 51, 51, 0.5);
   -webkit-transition: -webkit-transform 500ms ease;
   transition: -webkit-transform 500ms ease;
   transition: transform 500ms ease;
   transition: transform 500ms ease, -webkit-transform 500ms ease;
   z-index: 1;
 }
-.c-featurette__button {
-  position: absolute;
-  left: 24px;
-  bottom: 16px;
-  width: calc(100% - 94px);
-  opacity: 0;
-  padding: 24px 0;
-  font-family: "Poppins", sans-serif;
-  text-transform: uppercase;
-  margin: 0 24px 24px;
-  background: transparent;
-  border: none;
-  border-radius: 2px;
-  font-weight: 700;
-  letter-spacing: 2px;
-  font-size: 0.85em;
-  -webkit-transition: opacity 150ms ease;
-  transition: opacity 150ms ease;
-}
+
+
 
 
      /*-------------------------------------
