--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,9 @@
 
 
-/*styles added by me */
-/*3D hero image*/
+/*styles  by me */
+/*--------------------
+    3D hero image
+-----------------------*/
 *, *:before, *:after {
   box-sizing: border-box;
   margin: 40;
@@ -198,7 +200,7 @@ body {
   height: 1rem;
   margin-left: -0.5rem;
   margin-top: -0.5rem;
-  border: 2px solid #fff;
+  border: 4px solid rgb(15, 15, 15);
   border-left: none;
   border-bottom: none;
 }
@@ -239,7 +241,9 @@ body {
 
 
 
-/*adventure*/
+/*---------------------
+        adventure
+ ---------------------*/
 
 .feature-area {
   position: relative;
@@ -273,16 +277,20 @@ body {
     border: 1px solid transparent;
      box-shadow: 0px 5px 50px rgba(129, 74, 255, 0.2);}
 
-    /*end of adventure*/
+    /*---------------------------
+       end of adventure
+    ------------------------*/
 
 .img:hover {
     border: 7px solid transparent;
     
      }
 
-     /*top destinations*/
+     /*----------------------
+        next vacation 
+     ------------------------*/
 
-     @import url("https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap");
+     
 *, *::before, *::after {
   box-sizing: border-box;
 }
@@ -722,7 +730,9 @@ body {
 /*end of attention button*/
 
 
-/************book a trip****************/
+/*---------------------
+    book a trip
+-----------------------*/
 body {
   font-family: "Lato", Arial, sans-serif;
   font-weight: 400;
@@ -774,7 +784,9 @@ body {
 /* end of hotel cards */
 
 
-/*testimony*/
+/*----------------
+      testimony
+-------------------*/
 
 *{
   margin: 0;
@@ -850,7 +862,9 @@ body {
 
 /*end of testimony*/
 
-/*Offers*/
+/*---------------
+    Offers
+------------------*/
 
 .offers
 {
@@ -1019,9 +1033,8 @@ body {
 
 
 /*!
+ *Bootstrap from libraries
  * Bootstrap v4.2.1 (https://getbootstrap.com/)
- * Copyright 2011-2018 The Bootstrap Authors
- * Copyright 2011-2018 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 :root {
